docker and get products and db connected

--- a/Services/Catalog/Catalog.Api/appsettings.Development.json
+++ b/Services/Catalog/Catalog.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost,5432; Database=catalogs; User Id=my_user; Password=my_password;"
   }
 }
