--- a/Services/Catalog/Catalog.Api/Catalog.Api.csproj
+++ b/Services/Catalog/Catalog.Api/Catalog.Api.csproj
@@ -14,15 +14,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Products\GetProducts\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Carter" Version="8.2.1" />
+      <PackageReference Include="Marten" Version="7.31.3" />
     </ItemGroup>
 
 </Project>
